--- a/composer.json
+++ b/composer.json
@@ -72,7 +72,8 @@
     "kwn/php-rdkafka-stubs": "^2.0.3",
     "friendsofphp/php-cs-fixer": "^3.4",
     "dms/phpunit-arraysubset-asserts": "^0.2.1",
-    "phpspec/prophecy-phpunit": "^2.0"
+    "phpspec/prophecy-phpunit": "^2.0",
+    "symfony/http-foundation": "^5.4|^6.0"
   },
   "autoload": {
     "psr-4": {
@@ -137,4 +138,3 @@
     }
   }
 }
-
