fixed 404 error on sqs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -127,12 +127,12 @@ services:
       - '9090:9090'
 
   localstack:
-    image: 'localstack/localstack:latest'
+    image: 'localstack/localstack:0.8.0'
     ports:
       - '4576:4576'
       - '4575:4575'
     environment:
-      LOCALSTACK_HOST: 'localstack'
+      HOSTNAME_EXTERNAL: 'localstack'
       SERVICES: 'sqs,sns'
 
   influxdb:
