--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -127,7 +127,7 @@ jobs:
       matrix:
         php: ['7.4', '8.0', '8.1', '8.2'] # same as in the container
         symfony_version: ['5.4.*', '6.2.*', '6.3.*']
-        dependencies: ['--prefer-lowest', '--prefer-dist']
+        dependencies: ['--prefer-lowest', '--prefer-stable']
         exclude:
           - php: '7.4'
             symfony_version: '6.2.*'
