fixed 404 error on sqs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -178,3 +178,6 @@ jobs:
 
       - run: bin/test.sh --exclude-group=gearman
         if: ${{ matrix.php == '8.1' && matrix.php != '8.2' }}
+
+      - run: docker-compose logs localstack
+        if: ${{ always() }}
