fixed 404 error on sqs

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "phpstan": "bin/phpstan analyse --memory-limit=512M -c phpstan.neon"
   },
   "require": {
-    "php": "^7.4|^8.0",
+    "php": "^8.1",
 
     "ext-amqp": "^1.9.3|^2.0.0",
     "ext-gearman": "^2.0",
