--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,7 +76,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ['8.1', '8.2', '8.3'] # same as in the container
+        php: ['8.1', '8.2'] # same as in the container
         symfony_version: ['5.4.*', '6.4.*',]
         dependencies: ['--prefer-lowest', '--prefer-stable']
 
@@ -116,7 +116,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ['8.1', '8.2', '8.3'] # same as in the container
+        php: ['8.1', '8.2'] # same as in the container
         symfony_version: ['5.4.*', '6.4.*',]
         dependencies: ['--prefer-lowest', '--prefer-stable']
 
