--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -127,12 +127,14 @@ services:
       - '9090:9090'
 
   localstack:
-    image: 'localstack/localstack:0.8.10'
+    image: localstack/localstack:latest
     ports:
-      - "4567-4597:4567-4597"
+      - "4566:4566"            # LocalStack Gateway
+      - "4510-4559:4510-4559"  # external services port range
     environment:
+      MAIN_CONTAINER_NAME: "localstack"
       DEFAULT_REGION: 'us-east-1'
-      HOSTNAME_EXTERNAL: 'localstack'
+      LOCALSTACK_HOST: 'localstack:4566'
       SERVICES: 'sqs,sns'
       DEBUG: 'true'
 
