update docker comands

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '2'
-
 services:
   dev:
     # when image publishing gets sorted:
@@ -127,14 +125,16 @@ services:
       - '9090:9090'
 
   localstack:
-    image: localstack/localstack:latest
+    hostname: localstack
+    image: localstack/localstack:3
     ports:
       - "4566:4566"            # LocalStack Gateway
       - "4510-4559:4510-4559"  # external services port range
     environment:
-      MAIN_CONTAINER_NAME: "localstack"
+      MAIN_CONTAINER_NAME: localstack
       DEFAULT_REGION: 'us-east-1'
       LOCALSTACK_HOST: 'localstack:4566'
+      HOSTNAME_EXTERNAL: localstack
       SERVICES: 'sqs,sns'
       DEBUG: 'true'
 
