--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -155,7 +155,7 @@ jobs:
 
       # TODO: convert these two steps into one w/o excludes when Gearman extension gets a release for PHP 8.1
       # See https://github.com/php/pecl-networking-gearman/issues/16
-      - run: bin/test.sh
+      - run: bin/test.sh --exclude-group=gearman
 #        if: ${{ matrix.php != '8.1' && matrix.php != '8.2' }}
 
 #      - run: bin/test.sh --exclude-group=gearman
